# distributed_kv_store

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: a.out  config.cpp  error.cpp  main.cpp
src/kv/: config.hpp  error.hpp  result.hpp
tests/: smoke_test.cpp
